--- a/index.html
+++ b/index.html
@@ -1,158 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-
-	<link rel="stylesheet" href="../owlcarousel/owl.carousel.min.css">
-	<link rel="stylesheet" href="../owlcarousel/owl.theme.default.min.css">
-	<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../bootstrap4/css/bootstrap.css">
-<style>
-
-	*{
-		margin: 0px;
-		padding: 0px;
-	}
-
-	.box1{
-		height: 600px;
-		background-image: url(../images/hero-bg-2.jpg);
-		background-size: 100% 100%;
-	}
-
-	.box2{
-		height: 600px;
-		background-image: url(../images/feature-bg.jpg);
-		background-size: 100% 100%;
-	}
-
-	.box3{
-		height: 600px;
-		background-image: url(../images/hero-bg-3.jpg);
-		background-size: 100% 100%;
-	}
-
-	.sp1{
-		position: relative;
-		left: 250px;
-		top: 220px;
-	}
-	.fa{margin-left: 900px;font-size: 30px;border: 2px solid red;padding: 5px;}
-	.hh{padding: 50px;background-color: dodgerblue;}
-</style>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AfterShock</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+	<link rel="stylesheet" href="style.css" class="stylesheet">
 </head>
-
-
 <body>
-
-	<!-- Grey with black text -->
-	
-
-
-	<div class="b11">
-		<nav class="navbar navbar-expand-sm  navbar-dark fixed-top">
-
-			<button class="navbar-toggler b4" type="button" onclick="bar()" data-toggle="collapse" data-target="#collapsibleNavbar">
-    			<span class="navbar-toggler-icon"></span>
-  			</button>
-  			<div class="collapse navbar-collapse" id="collapsibleNavbar">
-			  <ul class="navbar-nav">
-			    <li class="nav-item active">
-			      <a class="nav-link" href="#">Home</a>
-			    </li>
-			    <li class="nav-item">
-			      <a class="nav-link" href="#">Products</a>
-			    </li>
-			    <li class="nav-item">
-			      <a class="nav-link" href="#">About</a>
-			    </li>
-			    <li class="nav-item">
-			      <a class="nav-link" href="#">Contact Us</a>
-			    </li>
-			    <li><i class="fa fa-shopping-cart" aria-hidden="true"></i></li>
-			  </ul>
-			</div>  
+	<header>
+		<nav>
+			<p class="logo">AfterShock</p> 
+			<ul>
+				<li>
+					<a href="#">About</a>
+				</li>
+				
+					<a href="#">Contact</a>
+				</li>
+				<li class="cart">
+					<a href="#">
+						<i class="fa-solid fa-cart-shopping"></i>
+					</a>
+				</li>
+				<li class="hamburger">
+					<a href="#">
+						<div class="bar"></div>
+					</a>
+				</li>
+			</ul>
 		</nav>
-
-		<div class="owl-carousel">
-	  		<div class="box1"><span class="sp1" style="font-size:80px;color:white;">Living Waters Energy Drink</span> </div>
-	  		<div class="box2"><span class="sp1" style="font-size:75px;color:white;">Qunech Your Taste <br> with the Power of 7</span>  </div>
-	 		<div class="box3"><span class="sp1" style="font-size: 80px;color:ghostwhite;">Place your order today!</span> </div>
-	 		<!-- <div class="box"> Your Content 4 </div> -->
-	  		<!-- <div class="box"> Your Content 5 </div> -->
+	</header>
+	<main>
+		<div class="vignette"></div>
+		<img src="images/background.png" data-speedx="0.3" data-speedy="0.38" data-distance="-200" class="parallax bg-img">
+		<img src="images/fog_7.png" data-speedx="0.27" data-speedy="0.32" data-distance="850" class="parallax fog-7">
+		<img src="images/mountain_10.png" data-speedx="0.195" data-speedy="0.305" data-distance="1100" class="parallax mountain-10">
+		<img src="images/fog_6.png" data-speedx="0.25" data-speedy="0.28" data-distance="1400" class="parallax fog-6">
+		<img src="images/mountain_9.png" data-speedx="0.125" data-speedy="0.155" data-distance="1700" class="parallax mountain-9">
+		<img src="images/mountain_8.png" data-speedx="0.1" data-speedy="0.11" data-distance="1800" class="parallax mountain-8">
+		<img src="images/fog_5.png" data-speedx="0.16" data-speedy="0.105" data-distance="1900" class="parallax fog-5">
+		<img src="images/mountain_7.png" data-speedx="0.1" data-speedy="0.1" data-distance="2000" class="parallax mountain-7">
+		<div class="text parallax" data-speedx="0.07" data-speedy="0.07" data-distance="0" >
+			<h2>AfterShock</h2>
+			<h1>Natural Energy</h1>
 		</div>
-	</div>
-
-
-	<div class="dd2">
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</div>
-
-	<div class="hh"></div>
-
-
+		<img src="images/mountain_6.png" data-speedx="0.065" data-speedy="0.05" data-distance="2300" class="parallax mountain-6">
+		<img src="images/fog_4.png" data-speedx="0.135" data-speedy="0.135" data-distance="2400" class="parallax fog-4">
+		<img src="images/mountain_5.png" data-speedx="0.08" data-speedy="0.08" data-distance="2550" class="parallax mountain-5">
+		<img src="images/fog_3.png" data-speedx="0.11" data-speedy="0.018" data-distance="2800" class="parallax fog-3">
+		<img src="images/mountain_4.png" data-speedx="0.059" data-speedy="0.024" data-distance="3200" class="parallax mountain-4">
+		<img src="images/mountain_3.png" data-speedx="0.04" data-speedy="0.018" data-distance="3400" class="parallax mountain-3">
+		<img src="images/fog_2.png" data-speedx="0.15" data-speedy="0.0115" data-distance="3600" class="parallax fog-2">
+		<img src="images/mountain_2.png" data-speedx="0.0235" data-speedy="0.013" data-distance="3800" class="parallax mountain-2">
+		<img src="images/mountain_1.png" data-speedx="0.027" data-speedy="0.18" data-distance="4000" class="parallax mountain-1">
+		<img src="images/sun_rays.png" class="sun-rays">
+		<img src="images/black_shadow.png" class="black-shadow">
+		<img src="images/fog_1.png" data-speedx="0.12" data-speedy="0.01" data-distance="4200" class="parallax fog-1">
+		
+	</main>
 	
-
-
-	<script src="../jquery.min.js"></script>
-	<script src="../owlcarousel/owl.carousel.min.js"></script>
-
-	<script>
-		$(document).ready(function(){
-	  		$(".owl-carousel").owlCarousel();
-			});
-
-
-		var owl = $('.owl-carousel');
-			owl.owlCarousel({
-    		items:1,
-    		loop:true,
-    		margin:5,
-    		autoplay:true,
-    		autoplayTimeout:5000,
-    		autoplayHoverPause:true
-		 })
-		var active = false	
-		function bar() {
-			var b4 = document.querySelector('.b4')
-			active = !active
-			if (active){
-				document.getElementById("collapsibleNavbar").style.display = "block"
-				b4.classList.remove('navbar-toggler')
-				b4.classList.add('navbar-toggler')
-			}
-			else {
-				document.getElementById("collapsibleNavbar").style.display = "none"
-				b4.classList.remove('navbar-toggler')
-				b4.classList.add('navbar-toggler')
-			}
-		}
-
-
-			// $('.play').on('click',function(){
-			//     owl.trigger('play.owl.autoplay',[1000])
-			// })
-			// $('.stop').on('click',function(){
-			//     owl.trigger('stop.owl.autoplay')
-			// })
-
-
-
-
-	</script>	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+	<script type="application/javascript" src="js/app.js"></script>
 </body>
 </html>
