--- a/justice/index.html
+++ b/justice/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>AfterShock</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-	<link rel="stylesheet" href="style.css" class="stylesheet">
+	<link rel="stylesheet" href="/justice/style.css" class="stylesheet">
 </head>
 <body>
 	<header>
@@ -62,6 +62,6 @@
 	</main>
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-	<script type="application/javascript" src="js/app.js"></script>
+	<script type="application/javascript" src="/justice/js/app.js"></script>
 </body>
 </html>
