--- a/justice/index.html
+++ b/justice/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/justice/style.css" class="stylesheet">
 </head>
 <body>
-	<header>
+	<header class = "hide">
 		<nav>
 			<p class="logo">AfterShock</p> 
 			<ul>
@@ -33,7 +33,7 @@
 		</nav>
 	</header>
 	<main>
-		<div class="vignette"></div>
+		<div class="vignette hide"></div>
 		<img src="images/background.png" data-speedx="0.3" data-speedy="0.38" data-distance="-200" class="parallax bg-img">
 		<img src="images/fog_7.png" data-speedx="0.27" data-speedy="0.32" data-distance="850" class="parallax fog-7">
 		<img src="images/mountain_10.png" data-speedx="0.195" data-speedy="0.305" data-distance="1100" class="parallax mountain-10">
@@ -55,8 +55,8 @@
 		<img src="images/fog_2.png" data-speedx="0.15" data-speedy="0.0115" data-distance="3600" class="parallax fog-2">
 		<img src="images/mountain_2.png" data-speedx="0.0235" data-speedy="0.013" data-distance="3800" class="parallax mountain-2">
 		<img src="images/mountain_1.png" data-speedx="0.027" data-speedy="0.18" data-distance="4000" class="parallax mountain-1">
-		<img src="images/sun_rays.png" class="sun-rays">
-		<img src="images/black_shadow.png" class="black-shadow">
+		<img src="images/sun_rays.png" class="sun-rays hide">
+		<img src="images/black_shadow.png" class="black-shadow hide">
 		<img src="images/fog_1.png" data-speedx="0.12" data-speedy="0.01" data-distance="4200" class="parallax fog-1">
 		
 	</main>
