--- a/justice/index.html
+++ b/justice/index.html
@@ -18,7 +18,7 @@
 				</li>
 				
 				<li>
-					<div class="btn"><a href="#">Contact</a>
+					<div class="btn"><a href="contacts.html">Contact</a>
 				</li>
 				
 				<li>
