--- a/justice/about.html
+++ b/justice/about.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/justice/about.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <title>AfterShock</title>
 </head>
 <body>
     <div class="contain">
     <header class = "hide">
 		<nav>
-			<a class="logo" href="index.html">AfterShock</p> 
+			<a class="logo" href="index.html">AfterShock</a> 
       
 		</nav>
 	</header>
